--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "diagrams" %}
-{% set version = "0.11.0" %}
+{% set version = "0.12.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,10 +7,10 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: ebaeaf89feda1059cadf4434f7c6d3899edb1bb21cef9a98b3d519f3da925510
+  sha256: 8cfc6554c79c9dc2372f144a857819e0ef982082cb690b0ac22c255e5177ee4a
 
 build:
-  number: 1
+  number: 0
 
 requirements:
   build:
@@ -51,3 +51,4 @@ extra:
     - oblute
     - rluria14
     - ndmaxar
+    - dhirschfeld
