--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: bb77d8f7a502b1638dc3ca7b267c8e4689f56203b248590cbda3e5269f9ba659
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -48,6 +48,7 @@ about:
 
 extra:
   recipe-maintainers:
+    - mxr-conda
     - oblute
     - rluria14
     - ndmaxar
